# wfrt_msc-thesis

./: .gitignore  README.md  environment.yaml  main.py  plot_stations_observations.ipynb  pyproject.toml
.ipynb_checkpoints/: plot_stations_observations-checkpoint.ipynb
data/eccc_data/: 20250801_verif_eccc_obs.csv
reports/results/: processed_scorecard.csv
sandbox/: 01-geometry.ipynb  02-bris_output.ipynb  03-graph.ipynb  04-wrf_forecasts.ipynb  05-grid_interpolation.ipynb  05-grid_interpolation.py  06_explore_inference_file.ipynb  06_explore_inference_file.py  07-plot_topography.ipynb  08-BCHydro_obs.ipynb  09-join_obs_data.ipynb  10-icosphere.ipynb  explore.sh  run.sh
src/: __init__.py  data_constants.py  evaluate.py  evaluate.sh  evaluate_catchment.py  evaluate_fir.sh  evaluate_resampling.py  plot.py  plot_errors.py  plot_evaluate.py  plot_scorecard.py  scorecard.py  scorecard.sh  scorecard_fir.sh  utils.py
src/case_study/: AR_event.py
src/climatology/: climatology.sh  climatology_download_utils.py  climatology_process_utils.py  compute_climatology.py
src/data/: download_earthengine.py  process_geometric_data.py
src/graph/: plot_graph.py
src/observations/: download.py  plot_stations_statistics.py  plots.py  process_precip.py  sort_stations.ipynb  sort_stations.py  stations_statistics.py
src/observations.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/predictions/: inference_aifs_single-v1.py  plot.py  plot_netcdf.py  plot_pkl.py  plot_regional_global.py  run.sh
src/utils/: data_constants.py  model_forecast_evaluator.py  (+3 more)
(+15 files in other folders)
