[project]
name = "wfrt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "earthengine-api>=1.7.1",
    "marimo>=0.17.7",
    "matplotlib>=3.10.7",
    "metpy>=1.7.1",
    "netcdf4>=1.7.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pyresample>=1.35.0",
    "scipy>=1.17.0",
    "xarray>=2025.12.0",
    "xgcm>=0.9.0",
    "xwrf>=0.0.5",
    "zarr>=3.1.5",
]
[tool.uv]
package = true

[tool.uv.workspace]
members = [
    ".",
]

